<?xml version="1.0"?>
<package format="2">
  <name>serl_franka_controllers</name>
  <version>0.1.0</version>
  <description>serl_franka_controllers provides a compliant yet accurate Cartesian impedance controller for controlling Franka Emika research robots that can be used in online reinforcement learning applications </description>
  <maintainer email="xuc@berkeley.edu">Charles Xu</maintainer>
  <license>Apache 2.0</license>

  <url type="website">https://serl-robot.github.io/</url>
  <url type="repository">https://github.com/rail-berkeley/serl_franka_controller/</url>
  <author>Jianlan Luo, Charles Xu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/serl_franka_controllers_plugin.xml"/>
  </export>
</package>
